s3-minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-http"
    nginx.ingress.kubernetes.io/ssl-redirect: "true" # Forces HTTP to HTTPS
    nginx.ingress.kubernetes.io/proxy-body-size: "50m" # Needed for image uploads
spec:
  tls:
    - hosts:
        - mnio.kaayaka.in # Or your specific MinIO domain
      secretName: kaayaka-tls-secret
  rules:
    - host: mnio.kaayaka.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-service
                port:
                  number: 9000
